# local-chat-mcp

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.rag-server  README.md  app.py  create-agent-files.sh  docker-compose.gpu.yml  docker-compose.yml  mcp-servers.json  mcp_client.py  package.json  pyproject.toml  requirements.txt  start.sh
scripts/: pull-models.sh  start-dev.sh
src/local_chat_agent/: __init__.py  __main__.py  app.py  config.py
src/local_chat_agent/llm/: __init__.py  base.py  ollama.py  types.py
src/local_chat_agent/mcp/: __init__.py  client_manager.py  config_loader.py  tool_executor.py  types.py
src/local_chat_agent/routes/: chat.py  mcp.py
templates/: index.html
